test/Fail/Issue5294.err
Issue5294.agda:35.15-16: error: [UnequalTerms]
(F x) !=< A
when checking that the expression r has type A
